# grimlocker-public

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  go.mod
core-rust/: Cargo.toml  SPLIT_REPOS_INFO.md
core-rust/src/: crypto.rs  enclave.rs  lib.rs  main.rs  time_guard.rs  wipe.rs
docs/: ARCHITECTURE.md  code-review-guide.md
engine/: port.go
engine/bridge/: gofallback.go  interface.go  rustbridge_helpers.go
engine/crypto/: chacha.go  coordinate.go  engine.go  entropy.go  interface.go  pqc_ready.go  provider.go  shredder.go
engine/errors/: logging.go  stacktrace.go  types.go  types_test.go
engine/gql/: errors.go  frame.go  opcodes.go  types.go  validator.go  validator_test.go
engine/kernel/: bus.go  dispatcher.go  event.go  handler.go  handler_test.go  module_factory.go  registry.go  uuid.go
engine/provider/: interfaces.go
engine/security/: audit.go  constant_time.go  intrusion_detector.go  lockdown.go  memguard.go  mvk_store.go  rate_limiter.go  secret_guard.go  session.go  zkp.go
engine/storage/: block.go  blockstore_v2.go  entry.go  interface.go
engine/tools/: ssh_gen.go  ssh_gen_test.go
grimdb/: go.mod
grimdb/cgo/: rustbridge.go
grimdb/crypto/: argon.go  chacha.go  coordinate.go  hkdf.go  interface.go  module.go  provider.go
grimdb/kernel/: kernel.go
grimdb/security/: audit.go  integrity.go  lockdown.go  memlock.go  memlock_unix.go  memlock_windows.go  module.go  session.go
