[package]
name = "grimlocker-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "grimlocker_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "core-rust"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
nix = { version = "0.27", features = ["fs", "mman"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_IO"] }
